# docker_c_plus_plus_github_action_azure_app_service_example

./: CMakeLists.txt  Dockerfile  README.md  create_federated_identity.sh
.github/workflows/: build_deploy.yaml
src/: main.cpp
